<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Логотип -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop" />

        <!-- Вкладки Вход/Регистрация -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="@color/primary_brown"
            app:tabTextColor="@color/text_secondary"
            app:tabIndicatorColor="@color/primary_brown">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />

        </com.google.android.material.tabs.TabLayout>

        <!-- Контейнер для форм -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />
        <!-- ВНИЗУ activity_auth.xml ДОБАВЬ: -->
        <Button
            android:id="@+id/btnLoginAsAdmin"
            android:layout_width="668dp"
            android:layout_height="17dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/background"
            android:text=" " />

    </LinearLayout>
</ScrollView>